--- a/Gjorgi_Delev_Protfolio1_Style.css
+++ b/Gjorgi_Delev_Protfolio1_Style.css
@@ -63,3 +63,83 @@ nav {
 
 /* Navigation Bar Finish */
 
+
+
+/* Header Section Intro Start */
+header {
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    height: 100vh;
+    justify-content: space-between;
+}
+
+.header-left {
+    width: 50%;
+    height: 100%;
+}
+
+.header-left img {
+    object-fit: cover;
+    object-position: right;
+    width: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0.8;
+}
+
+.header-right-container {
+    display: flex;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+}
+
+.header-right p {
+    margin-top: 20px;
+    width: 215px;
+    text-align: center;
+}
+
+.header-right h1 {
+    color: green;
+}
+
+@media (max-width: 720px) {
+    header {
+        display: flex;
+        flex-direction: column;
+        width: 100vw;
+    }
+
+    .header-left {
+        height: 60%;
+    }
+
+    .header-left img {
+        object-fit: cover;
+        object-position: right;
+        height: 100%;
+        width: 100vh;
+    }
+
+    .header-right-container {
+        width: 100%;
+        height: 50%;
+    }
+
+    .header-right {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
+        width: 100%;
+        align-items: center;
+    }
+
+    /* .header-right p {
+        width: 100%;
+    } */
+}
+
+/* Header Section Intro End */
