--- a/Gjorgi_Delev_Protfolio1_Style.css
+++ b/Gjorgi_Delev_Protfolio1_Style.css
@@ -254,3 +254,56 @@ form button {
 
 
 /* Sign Up Form End */
+
+
+
+/* Footer Start */
+footer {
+    background-color: black;
+    /* opacity: 0.5; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: space-around;
+    height: 50vh;
+    padding-top: 15px;
+}
+
+footer small {
+    color: green;
+    font-weight: bold;
+    font-size: 16px;
+
+
+}
+
+footer h3 {
+    font-size: 25px;
+    color: green;
+    margin-bottom: -33px;
+}
+
+footer p {
+    color: white;
+    margin-top: 12px;
+
+}
+
+.footer-icons {
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    width: 250px;
+}
+
+.icon {
+    width: 25px;
+    object-fit: contain;
+}
+
+.ig {
+    width: 40px;
+}
+
+/* Footer Finish */
