--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ nav {
 
 .nav-right {
     display: flex;
-    width: 350px;
+    width: 390px;
+    padding-right: 40px;
     display: flex;
     justify-content: space-between;
 }
@@ -69,8 +70,8 @@ nav {
 header {
     display: flex;
     flex-direction: row;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 60vh;
     justify-content: space-between;
 }
 
@@ -83,7 +84,8 @@ header {
     object-fit: cover;
     object-position: right;
     width: 100%;
-    min-width: 100%;
+    height: 60%;
+    /* min-width: 100%; */
     min-height: 100%;
     opacity: 0.8;
 }
@@ -118,7 +120,8 @@ header {
     header {
         display: flex;
         flex-direction: column;
-        width: 100vw;
+        width: 100%;
+        height: 100vh;
     }
 
     .header-left {
@@ -156,7 +159,7 @@ header {
 
 
 /* About Us Section Start */
-section {
+main {
     padding: 10px;
     background-color: black;
 }
@@ -172,8 +175,8 @@ section {
     padding: 20px;
 }
 
-section h2,
-section p {
+main h2,
+main p {
     color: green;
     text-align: center;
 }
@@ -224,14 +227,27 @@ form {
     justify-content: center;
     padding: 20px;
 }
-
+form h2 {
+    font-size: 35px;
+    margin-top: -30px;
+}
+form h4 {
+    font-size: 25px;
+    margin-top: 5px;
+}
+form label {
+    font-size: 20px;
+}
+form button {
+    font-size: 20px;
+}
 .form-title {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     height: 60px;
-    color: green
+    color: green;
 }
 
 .form-inputs {
@@ -242,7 +258,7 @@ form {
     padding: 20px;
 }
 .form-inputs input {
-    font-size: 16px;
+    font-size: 20px;
 }
 .form-inputs label {
     margin-bottom: 5px;
